overflow issue fixed

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 	height:400px;
 	border: 1px solid black;
 	border-radius: 3px;
+	overflow-y: scroll;
 }
 
 #chatBox{
